--- a/index.css
+++ b/index.css
@@ -15,8 +15,9 @@ body{
     background: rgb(0,5,36);
     background: linear-gradient(90deg, rgba(0,5,36,1) 0%, rgba(9,17,121,1) 54%, rgba(0,212,255,1) 100%);
     display: grid;
-    grid-template: .5fr 3fr / 2.5fr 1fr;
+    grid-template: .5fr 3fr / 1fr;
     gap: .5rem;
+    
 }
 header{
     grid-area: 1 / 1 / 2 / 3;
@@ -27,16 +28,26 @@ main{
     background-color: transparent;
     border: 5px solid rgb(42, 42, 99);
     border-radius: 20px;
-    display: grid;
-    grid-template-rows: .5fr 3.5fr;;
+    display: flex;
+    flex-direction: column;
     padding: .5rem;
+    gap: .5rem;
+    /* align-items: center; */
 }
-main > h2{
-    margin: .5rem 0;
+main > button{
+    width: 20%;
+    padding: 1rem;
     text-align: center;
+    margin: 0 auto;
+    font-size: 1rem;
+    font-weight: bold;
+    background-color: transparent;
+    border-radius: 10px;
+    color: #fff;
 }
 main > .Book-Container{
     border: 2px solid #fff;
+    height: 100%;
     border-radius: 10px;
     display: grid;
     padding: .5rem;
@@ -74,14 +85,18 @@ main > .Book-Container > .card-holder > button:hover{
     color: #000;
 }
 section{
-    grid-area: 2/2/3/3;
+    width: 300px;
+    height: 495px;
+    /* grid-area: 2/2/3/3; */
     background-color: transparent;
     border: 5px solid rgb(42, 42, 99);
     border-radius: 20px;
     padding: .5rem;
     text-align: center;
-    display: grid;
-    position: relative;
+    display: none;
+    top: 121px;
+    left: 31%;
+    position: absolute;
     grid-template-rows: .2fr 1.5fr 2.5fr 1fr;
 }
 section h2{
@@ -140,6 +155,12 @@ section .for-button > button{
     font-weight: bold;
 
 }
+section .for-button > .add{
+    background-color: green;
+}
+section .for-button > .exit{
+    background-color: red;
+}
 section .for-button > button:hover{
     background-color: #89bbf1;
     /* border: transparent; */
@@ -165,6 +186,7 @@ section > .validation > button{
     border: none;
     border-radius: 10px;
 }
+
 
 
 
