--- a/index.css
+++ b/index.css
@@ -59,11 +59,13 @@ main > .Book-Container > .card-holder{
     padding: 1rem 1rem;
     border-radius: 10px;
     display: grid;
+    position: relative;
     flex-direction: column;
     gap: 1rem;
     text-align: justify;
     text-align: center;
     grid-template-rows: 1fr 1fr 200px;
+    
 } 
 main > .Book-Container > .card-holder > h3{
     margin: 0;
@@ -194,6 +196,28 @@ section > .validation > button{
     border: none;
     border-radius: 10px;
 }
+
+.card-holder .forsypnosisonly{
+    position: absolute;
+    color: #000;
+    text-align: justify;
+    padding: 1rem;
+    display: flex;  
+    height: 100%;
+    width: 100%;
+    border-radius: 9px;
+    background-color: white;
+    flex-direction: column;
+}
+.card-holder .forsypnosisonly >button{
+    padding: 1rem;
+    background-color: red;
+    position: absolute;
+    bottom: 20px;
+    left: 35%;
+    border-radius: 10px;
+}
+
 
 
 
