--- a/index.css
+++ b/index.css
@@ -6,52 +6,48 @@ body{
     font-family: sans-serif;
     color: #fff;
 }
+.container, main, main > .Book-Container{
+    gap: .5rem;
+    padding: .5rem;
+}
+main, main > button{
+    background-color: transparent;
+}
+header, main > button{
+    text-align: center;
+}
 .container{
     min-width: 100vw;
     min-height: 100vh;
     width: 100vw;
     height: 100vh;
-    padding: 1rem;
-    background: rgb(0,5,36);
     background: linear-gradient(90deg, rgba(0,5,36,1) 0%, rgba(9,17,121,1) 54%, rgba(0,212,255,1) 100%);
     display: grid;
     grid-template: .5fr 3fr / 1fr;
-    gap: .5rem;
-    
 }
 header{
     grid-area: 1 / 1 / 2 / 3;
-    text-align: center;
 }
 main{
     grid-area: 2 / 1 / 3 / 2;
-    background-color: transparent;
     border: 5px solid rgb(42, 42, 99);
-    border-radius: 20px;
+    border-radius: 10px;
     display: flex;
     flex-direction: column;
-    padding: .5rem;
-    gap: .5rem;
-    /* align-items: center; */
 }
 main > button{
     width: 20%;
     padding: 1rem;
-    text-align: center;
     margin: 0 auto;
     font-size: 1rem;
     font-weight: bold;
-    background-color: transparent;
     border-radius: 10px;
     color: #fff;
 }
 main > .Book-Container{
     border: 2px solid #fff;
     height: 100%;
-    border-radius: 10px;
     display: grid;
-    padding: .5rem;
-    gap: .5rem;
     grid-template: repeat(auto-fit, minmax(190px, .5fr)) / repeat(auto-fill, minmax(200px, .5fr)); 
 }
 main > .Book-Container > .card-holder{
@@ -103,10 +99,10 @@ section{
     border-radius: 20px;
     padding: .5rem;
     text-align: center;
-    display: none;
-    top: 121px;
+    display: grid;
+    /* top: 121px;
     left: 31%;
-    position: absolute;
+    position: absolute; */
     grid-template-rows: .2fr 1.5fr 2.5fr 1fr;
 }
 section h2{
@@ -217,6 +213,14 @@ section > .validation > button{
     left: 35%;
     border-radius: 10px;
 }
+.reSection{
+    width: 100vw;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 
 
 
